[gd_scene load_steps=7 format=3 uid="uid://be7getvmft1b1"]

[ext_resource type="Texture2D" uid="uid://d4mj22hoyron5" path="res://Asset/Objects/Basic Furniture.png" id="1_hu5em"]
[ext_resource type="PackedScene" uid="uid://daagnusnhoagq" path="res://Boxes/Hurtbox.tscn" id="2_ev74i"]
[ext_resource type="Script" path="res://Objects/Bed.gd" id="2_v03w0"]
[ext_resource type="PackedScene" uid="uid://c6xk6e6kxu438" path="res://Scripts/HealthSystem.tscn" id="4_n0fma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k366"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p40uh"]
size = Vector2(14, 16)

[node name="Bed" type="Sprite2D"]
y_sort_enabled = true
texture = ExtResource("1_hu5em")
region_enabled = true
region_rect = Rect2(0, 16, 16, 32)
script = ExtResource("2_v03w0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_3k366")

[node name="Hutbox" parent="." instance=ExtResource("2_ev74i")]
collision_layer = 32

[node name="CollisionShape2D" parent="Hutbox" index="0"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_p40uh")

[node name="HealthSystem" parent="." node_paths=PackedStringArray("healthBar") instance=ExtResource("4_n0fma")]
healthBar = NodePath("../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.911332, 0.0652282, 0.0392168, 1)
offset_left = -7.0
offset_top = -9.0
offset_right = 133.0
offset_bottom = 18.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="hurt" from="Hutbox" to="." method="_on_hutbox_hurt"]
[connection signal="healthChanged" from="HealthSystem" to="." method="_onHealthChanged"]

[editable path="Hutbox"]
